# libmatrix

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: libmatrix.docx
examples/: CMakeLists.txt  backtrace.h
src/: CMakeLists.txt  array.c  array.h  backtrace.c  basic_math.c  file.c  file.h  func.c  func.h  funcs.c  helper.c  helper.h  matrix.c  matrix.h  mm.h  operator.c  set.c  set.h  vidx.c  vidx.h
src/basics/: CMakeLists.txt  basics.c  basics.h  checking.c
src/core/: array.c  array.h  basic.c  init.c  matrix.h  mm.c  vidx.c
src/funcs/: funcs.h
src/init/: CMakeLists.txt  array.c  array.h  helper.c  helper.h  init.h  matrix.c  matrix.h  operator.c  vidx.c  vidx.h
src/old/basics/: CMakeLists.txt  basics.c  basics.h
src/old/factor/: CMakeLists.txt
src/old/funcs/: CMakeLists.txt  funcs.c  funcs.h
src/old/init/: matrix.h  mm.h
test/: test_array.c  test_matrix.c
utest/: CMakeLists.txt  test_matrix.c
